@@ -2,6 +2,15 @@
 
         Reviewed by Lars.
 
+        Removed a bunch of slots/functions that are now available through the new actions API.
+
+        * Api/qwebpage.cpp:
+        * Api/qwebpage.h:
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Added some more comments to the API after another round of API review with Lars.
 
         * Api/qwebpage.h:
